@@ -9,6 +9,7 @@ Current git version
 
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
+  * New read-only client attribute 'decoration_geometry'.
 
 Release 0.9.3 on 2021-05-15
 ---------------------------
